updated the pipeline section. added a better image and removed two existing ones. added 3 references

--- a/jair.bib
+++ b/jair.bib
@@ -566,3 +566,28 @@
   HowPublished             = {\url{http://www.xlike.org/}}
 }
 
+@inproceedings{Trampus2012,
+  address = {Ljubljana, Slovenia},
+  author = {Trampu\v{s}, Mitja and Novak, Bla\v{z}},
+  booktitle = {Proceedings of 15th Multiconference on Information Society 2012 (IS-2012)},
+  title = {The Internals Of An Aggregated Web News Feed},
+  year = {2012}
+}
+
+@Inproceedings{zhang2014saaacamactat,
+	booktitle = {Proceedings of the Demonstrations at the 14th Conference of the European Chapter of the Association for Computational Linguistics (EACL 2014)},
+	month = {April},
+	pages = {13-16},
+	publisher = {Association for Computational Linguistics},
+	title = {Semantic Annotation, Analysis and Comparison: A Multilingual and Cross-lingual Text Analytics Toolkit},
+	year = {2014},
+	type = {Inproceedings},
+	author = {Lei Zhang and Achim Rettinger}
+}
+
+@article{brank2014,
+  title={A high-performance multithreaded approach for clustering a stream of documents},
+  author={Brank, Janez and Leban, Gregor and Grobelnik, Marko},
+  booktitle = {Proceedings of 17th Multiconference on Information Society 2014 (IS-2014)},
+  year={2014}
+}
